Document workspace endpoints in Swagger
